Server-client model is tested on L0

--- a/server/Makefile
+++ b/server/Makefile
@@ -28,4 +28,4 @@ keygen: keygen.o $(INCLUDE)/gcry.o
 	$(CC) -o keygen keygen.o $(INCLUDE)/gcry.o $(LIBS)
 
 clean:
-	$(RM) -f server keygen $(OBJS) rsa.sp
+	$(RM) -f server keygen $(OBJS)
