Add mmap and spying logic

--- a/test/Makefile
+++ b/test/Makefile
@@ -3,12 +3,20 @@
 CC := gcc
 RM := rm
 
+OBJS := attack.o asm.o
+
 .PHONY: all clean
 
-all: page_access
+all: attack
 
-page_access: page_access.c
-	$(CC) -o page_access page_access.c
+asm.o: asm.c
+	$(CC) -c asm.c -o asm.o
+
+attack.o: attack.c
+	$(CC) -c attack.c -o attack.o
+
+attack: attack.o asm.o
+	$(CC) -o attack attack.o asm.o
 
 clean:
-	$(RM) -f page_access
+	$(RM) -f attack $(OBJS)
