Move attack codes into client folder

--- a/.gitignore
+++ b/.gitignore
@@ -56,8 +56,7 @@ server/server
 server/keygen
 server/rsa.sp
 client/client
+client/attack
 client/rsa.sp
-test/page_access
-test/attack
 *run.sh
 *.txt
