--- a/client/Makefile
+++ b/client/Makefile
@@ -3,6 +3,8 @@
 CC := gcc
 RM := rm
 
+LIBDIR := /usr/local/lib
+
 CFLAGS := -Wall `libgcrypt-config --cflags`
 
 LIBS := `libgcrypt-config --libs`
@@ -19,7 +21,7 @@ client.o: client.c
 	$(CC) -c client.c $(CFLAGS) -o client.o -I$(INCLUDE)
 
 client: client.o $(INCLUDE)/gcry.o
-	$(CC) -o client client.o $(INCLUDE)/gcry.o $(LIBS)
+	$(CC) -o client client.o $(INCLUDE)/gcry.o $(LIBS) -L$(LIBDIR)
 
 attack: attack.c
 	$(CC) attack.c -Wall -g -o attack
