--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,6 @@ dkms.conf
 
 # User defined files
 same-OS/attack
-same-OS/text.txt
 same-OS/text.txt.gpg
 same-OS/result-*.txt
 cross-VM/*/server/server
@@ -63,3 +62,4 @@ cross-VM/*/client/attack
 cross-VM/*/client/result-*.txt
 cross-VM/RSA/*/rsa.sp
 cross-VM/EdDSA/*/ecc.sp
+doc/dump-*.txt
