Fix offset path in run.sh

--- a/.gitignore
+++ b/.gitignore
@@ -57,16 +57,11 @@ same-OS/text.txt.gpg
 same-OS/result-*.txt
 cross-VM/*/server/server
 cross-VM/*/server/keygen
+cross-VM/*/client/encrypt
 cross-VM/*/client/client
 cross-VM/*/client/attack
 cross-VM/*/client/result-*.txt
-cross-VM/*/client_test/encrypt
-cross-VM/*/client_test/client
-cross-VM/*/client_test/attack
-cross-VM/*/client_test/result-*.txt
-cross-VM/*/client_test/cipher.txt
+cross-VM/*/client/cipher.txt
 cross-VM/RSA/*/rsa.sp
 cross-VM/EdDSA/*/ecc.sp
-cross-VM/EdDSA/*/run.sh
-doc/dump-*.txt
-doc/*-libgcrypt-1.8.4.txt
+offsets/dump-*.txt
