--- a/cross-VM/RSA/server/Makefile
+++ b/cross-VM/RSA/server/Makefile
@@ -5,15 +5,13 @@ RM := rm
 
 LIBDIR := /usr/local/lib
 
-DEFAULT := $(HOME)/INV-RELOAD
-
 CFLAGS := -Wall `libgcrypt-config --cflags`
 
 LIBS := `libgcrypt-config --libs`
 
 OBJS := server.o keygen.o
 
-INCLUDE := $(DEFAULT)/include
+INCLUDE := $(HOME)/INV-RELOAD/include
 
 .PHONY: all clean
 
